# aemet

./: .gitignore  Makefile  README.md  aemet  pyproject.toml
.github/workflows/: export-aemet-data.yml
dataset/: README.md
src/aemet/: cli.py
