[project]
name = "aemet"
version = "0.1.0"
description = "Datos de la API de AEMET, a un archivo de distancia"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1"]

[project.scripts]
aemet = "aemet:cli.main"

[build-system]
requires = ["uv_build>=0.7.21,<0.8"]
build-backend = "uv_build"
